--- a/requirements.txt
+++ b/requirements.txt
@@ -10,4 +10,6 @@ MarkupSafe==3.0.2
 packaging==25.0
 Werkzeug==3.1.3
 zipp==3.23.0
-SQLAlchemy==2.0.30
+python-dotenv==1.0.0
+pytest==8.3.4
+pytest-flask==1.3.0
